# asphalt-db

./: README.md  environment.yaml  environment.yml  pyproject.toml
cli/: run_regression_models.sh
data/: processed_columns.json  raw_columns.json  summarized_columns.json
docs/orm/: asphalt.drawio
main/: config.py  generate_dummy_raw.py  generate_dummy_raw_matthias.py  generate_folder_structure.py  init_db.py  parse_data.py  parse_db.py  plot_sigma_vs_pha.py  plot_trial.py  querry_db.py
main/eda/: eda.py  eda_plots.py  eda_table.py
main/ml/: prepare_data.py  train_lightgbm_quantile.py  train_mlp.py  train_xgboost.py
main/ml/lightgbm/: train_lightgbm_quantile.py
main/ml/mlp/: train_mlp.py
main/ml/probabilistic_mlp/: train_pmlp.py
main/ml/xgboost/: train_xgboost.py
main/plots/: plot_sigma_vs_pha.py  plot_strength_raw_data.py
src/: config.py
src/building/: schema.py  utils.py
src/compiling/: Vermoeiing vak 1 (1-8) Versie2.xlsm  compiling_stiffness.py  compiling_tables.py  fatigue_compiling.py  stiffness_compiling.py  strength_compiling.py
src/db_builder/: build.py  models.py  schema.py  utils.py
src/ml/: lightgbm.py  lightgbm_model.py  mlp_model.py  pmlp_model.py  utils.py  xgboost.py  xgboost_model.py
src/parsing/: fatigue_parsing.py  parse.py  parsing_tables.py  parsingstiffness.py  stiffness_parsing.py  strength_parsing.py
src/processing/: fatigue_processing.py  processing_tables.py  processingstiffness.py  stiffness_processing.py  strength_processing.py
