[project]
name = "asphalt-db"
version = "0.1.0"
description = ""
authors = [
    {name = "Antonis Mavritsakis",email = "amavrits@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "peewee (>=3.18.2,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "xgboost (>=3.0.3,<4.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
